--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,39 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.container {
+  padding-left: 50px;
+  padding-right: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1270px;
+}
+
+input {
+  border: 1px solid #ccc;
+  background-color: white;
+  padding: 12px 16px;
+}
+
+.navbar a:hover,
+.navbar button:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.btn {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 12px 24px;
+  color: white;
+  font-weight: 700;
+  background-color: #2B7FFF;
+  cursor: pointer;
+  transition: 0.15s ease;
+}
+
+.btn:hover {
+  background-color: #155CFC;
+}
