--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+@import './css/reset.css';
+
+@import './css/icon.css';
+@import './css/form.css';
+
+@import "tailwindcss/utilities";
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -18,13 +25,6 @@ code {
   margin-left: auto;
   margin-right: auto;
   max-width: 1270px;
-}
-
-input,
-textarea {
-  border: 1px solid #ccc;
-  background-color: white;
-  padding: 12px 16px;
 }
 
 .navbar a:hover,
